# p2pComm

./: .gitignore  Cargo.toml  PROJECT_SPECIFICATION.md  PROJECT_STATUS.md  README.md
.cargo/: config.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/scripts/: copy-wasm.js
frontend/src/: app.js  main.js
frontend/src/services/: kaspa.js  webrtc.js
frontend/src/styles/: base.css  components.css  index.css  layout.css  responsive.css  variables.css
kaspa-testnet-test-rs/: .gitignore  Cargo.toml  check_balance.rs  check_balance.sh  configure-firewall.ps1  test_delivery_strategy.rs  test_message_reception.rs  test_offline.rs  test_payload_manager.rs  test_peer_discovery.rs  test_rpc_client.rs  test_transaction_builder.rs  test_wallet_manager.rs  test_webrtc_signaling.rs
kaspa-testnet-test-rs/src/: delivery_strategy.rs  main.rs  message_extractor.rs  message_reception.rs  payload_manager.rs  peer_discovery.rs  rpc_client.rs  transaction_builder.rs  utxo_monitor.rs  wallet_manager.rs  webrtc_signaling.rs
kaspa-testnet-test-rs/src/tests/: mod.rs  test_01_connection.rs  test_02_wallet.rs  test_03_script_builder.rs  test_04_commit.rs  test_05_reveal.rs  test_06_full_flow.rs
kaspa-testnet-test-rs/src/utils/: crypto.rs  logger.rs  mod.rs  wallet.rs
wasm-core/: Cargo.toml  build.bat  build.sh  chat.html  example.html  kaspa-service.js  serve.py
wasm-core/.cargo/: config.toml
wasm-core/src/: lib.rs  wasm_bindings.rs
wasm-core/src/bootstrap/: cache.rs  invite.rs  mod.rs  qr.rs
wasm-core/src/crypto/: encryption.rs  hashing.rs  keys.rs  mod.rs  password.rs  signing.rs
wasm-core/src/identity/: mod.rs
wasm-core/src/kaspa/: delivery_coordinator.rs  discovery.rs  envelope.rs  message_reception.rs  mod.rs  payload.rs  rpc_bridge.rs  service.rs  signaling.rs  tx_builder.rs  tx_signer.rs  types.rs  utxo_monitor.rs  wallet_bridge.rs  webrtc_manager.rs
wasm-core/src/message/: mod.rs
wasm-core/src/network/: connection.rs  manager.rs  mod.rs  protocol.rs  reconnect.rs  router.rs  tests.rs
wasm-core/src/storage/: cache.rs  encryption.rs  indexed_db.rs  mod.rs  types.rs
wasm-core/src/storage/stores/: contacts.rs  conversations.rs  identity.rs  messages.rs  mod.rs  peer_addresses.rs  settings.rs
wasm-core/src/wasm_bindings/: bootstrap_api.rs  identity_api.rs  kaspa_api.rs  message_api.rs  network_api.rs  storage_api.rs
