[package]
name = "kaspa-testnet-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kaspa core libraries
kaspa-rpc-core = "0.15"
kaspa-wrpc-client = "0.15"
kaspa-addresses = "0.15"
kaspa-txscript = "0.15"
kaspa-wallet-core = "0.15"
kaspa-wallet-keys = "0.15"
kaspa-bip32 = "0.15"
kaspa-consensus-core = "0.15"
kaspa-hashes = "0.15"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Terminal output
colored = "2.1"
indicatif = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Utilities
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
sha2 = "0.10"


[[bin]]
name = "kaspa-testnet-test"
path = "src/main.rs"

[[bin]]
name = "test-wallet"
path = "test_wallet_manager.rs"

[[bin]]
name = "test-tx"
path = "test_transaction_builder.rs"

[[bin]]
name = "test-rpc"
path = "test_rpc_client.rs"

[[bin]]
name = "test-payload"
path = "test_payload_manager.rs"

[[bin]]
name = "test-delivery"
path = "test_delivery_strategy.rs"

[[bin]]
name = "test-reception"
path = "test_message_reception.rs"

[[bin]]
name = "test-signaling"
path = "test_webrtc_signaling.rs"

[[bin]]
name = "test-discovery"
path = "test_peer_discovery.rs"
