[package]
name = "wasm-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Wasm bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "console",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    # IndexedDB support
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbVersionChangeEvent",
    "IdbKeyRange",
    "IdbIndex",
    "IdbIndexParameters",
    "IdbCursor",
    "IdbCursorWithValue",
    "IdbCursorDirection",
    "DomException",
    "DomStringList",
    "Event",
    "EventTarget",
    # WebRTC support
    "RtcPeerConnection",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcDataChannelType",
    "MessageEvent",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcSignalingState",
    "RtcPeerConnectionState",
    "RtcAnswerOptions",
    "RtcOfferOptions",
] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
sha2 = "0.10"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
# For Kaspa's getrandom 0.3 requirement (WASM)
getrandom_new = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde-wasm-bindgen = "0.6"

# Utilities
thiserror = "1.0"
hex = "0.4"
base64 = "0.21"
qrcode = "0.14"
once_cell = "1.19"

# Async runtime
futures = "0.3"

# Error handling and panic
console_error_panic_hook = "0.1"

# Kaspa blockchain integration (from git for TN10/Crescendo support)
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
secp256k1 = { version = "0.28", features = ["global-context", "rand-std"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 2
lto = false
codegen-units = 16

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
